fix z-index for dropdown menus

--- a/FRONTEND/src/index.css
+++ b/FRONTEND/src/index.css
@@ -111,6 +111,10 @@ header {
     }
   }
 
+  ul .dropdown {
+    z-index: 1000;
+  }
+
   .menu-hamburger .dropdown {
     list-style: none;
     padding-left: 1rem;
